<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>group5_final</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="swarajmrao@todo.todo">swarajmrao</maintainer>
  <maintainer email="suhas99@umd.edu">suhas99</maintainer>
  <maintainer email="bhavana3@umd.edu">bhavana3</maintainer>

  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>mage_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>ros2_aruco_interfaces</depend>
  <depend>final_project</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group> -->
  
  <test_depend>ament_lint_auto</test_depend>

  <test_depend>ament_lint_common</test_depend>

  <export>

    <build_type>ament_cmake</build_type>

  </export>

</package>
